# tei-annotator

./: .gitignore  README.md  app.py  implementation-plan.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/skills/optimize-element-descriptions/: SKILL.md
docs/: batch-annotation-experiment.md  evaluation-results.md  huggingface-deployment.md  implementation-plan.md  tei-element-descriptions.md  webservice.md
scripts/: evaluate_llm.py  smoke_test_llm.py  smoke_test_webservice.py
tei_annotator/: __init__.py  pipeline.py  tei.py
tei_annotator/chunking/: README.md  __init__.py  chunker.py
tei_annotator/detection/: README.md  gliner_detector.py
tei_annotator/evaluation/: README.md  __init__.py  evaluator.py  extractor.py  metrics.py
tei_annotator/inference/: README.md  __init__.py  endpoint.py
tei_annotator/models/: README.md  __init__.py  schema.py  spans.py
tei_annotator/postprocessing/: README.md  __init__.py  injector.py  parser.py  resolver.py  validator.py
tei_annotator/prompting/: README.md  __init__.py  builder.py
tei_annotator/prompting/templates/: json_enforced.jinja2  text_gen.jinja2
tei_annotator/schemas/: blbl.py
tests/: test_builder.py  test_chunker.py  test_evaluation.py  test_injector.py  test_parser.py  test_pipeline.py  test_resolver.py  test_tei.py  test_validator.py
tests/fixtures/: blbl-examples.tei.xml
tests/integration/: test_gliner_detector.py  test_pipeline_e2e.py
webservice/: .env.template  Dockerfile  README.md  connectors.py  main.py  nginx.conf  tei-annotator.service
webservice/static/: index.html
webservice/templates/: index.html
