[project]
name = "tei-annotator"
version = "0.1.0"
description = "TEI XML annotation library using LLM pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "lxml>=5.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
gliner = ["gliner>=0.2"]
webservice = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]
gradio = ["gradio>=6.9"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests (require GLiNER model download)",
]

[tool.taskipy.tasks]
test = "uv run pytest"
webservice = "uv run python webservice/main.py"
gradio = "uv run python app.py"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "taskipy>=1.13",
    "tqdm>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
